--- a/ifsc4399/assignment-1/assets/style/site.css
+++ b/ifsc4399/assignment-1/assets/style/site.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+    border: 1px solid black;
     margin: 0;
     padding: 0;
 }
@@ -15,8 +16,18 @@ header {
 
 header h1 {
     font-weight: bold;
+    margin:1px;
+    padding:1px;
 }
-
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+nav ul li {
+    display: inline;
+    margin:0;
+}
 nav a {
     text-decoration: none;
     color: white;
@@ -28,13 +39,28 @@ nav a {
 
 .sidebar {
     float: left;
-    width: 25%;
-    border-right: solid 1px black;
+    width:180px;
+}
+.sidebar p {
+    padding: 5px;
+    margin-left: 10px;
+    line-height: 18px;
 }
 
 .content {
     float: right;
-    width: 74%;
+    border-left: 1px solid black;
+    width: 390px;
+    padding:0 10px 0 10px;
+}
+.content h2 {
+    margin-bottom: 0px;
+}
+.content p {
+    margin-top: 0px;
+}
+.content img {
+    float: right;
 }
 
 footer {
@@ -42,4 +68,10 @@ footer {
     background-color: gray;
     color: white;
     padding: 5px
+}
+footer h6 {
+    font-size: 20px;
+    font-weight:normal;
+    padding: 0;
+    margin:0;
 }
